--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -150,7 +150,7 @@ l.269 How does lower VPD in the understory inhibit evaporative cooling, if VPD i
 
 l.313 'information from adjacent mature leaves or apical meristems, including a “memory” of previous conditions in that location, ...'.  This was not in the previous version that I can see, and I don't see the basis for inclusion of this statement. As well, use of the term 'memory' seems awkward if not entirely wrong (even reading between quotes). Please revise.
 
-*response required*
+**Revised as suggested.**
 
 l.579 'implies that high 𝑇𝑎𝑖𝑟 should decrease 𝑔𝑠 of upper canopy leaves more than understory leaves'. The authors here are ignoring what they’ve said previously, that high Tair is associated with high VPD (l. 199-200), and that VPD is conclusively a much stronger driver of gs than Tleaf (Leuning 1995, Grossiord). I think the sentence should be corrected and include VPD.  I'm not yet aware of a good study that has decoupled VPD and Tleaf to prove that Tleaf intrinsically causes reduction in gs. So the authors cannot conclude this.
 
