addressing comment about gs

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3803,6 +3803,25 @@
   file = {/Users/nidhivinod/Zotero/storage/UZ8WPI8I/Fredeen and Sage - 1999 - Temperature and humidity effects on branchlet gas-.pdf}
 }
 
+@article{fredeenTemperatureHumidityEffects1999a,
+  title = {Temperature and Humidity Effects on Branchlet Gas-Exchange in White Spruce: An Explanation for the Increase in Transpiration with Branchlet Temperature},
+  shorttitle = {Temperature and Humidity Effects on Branchlet Gas-Exchange in White Spruce},
+  author = {Fredeen, A. L. and Sage, R. F.},
+  date = {1999-11-01},
+  journaltitle = {Trees},
+  volume = {14},
+  number = {3},
+  pages = {161--168},
+  issn = {1432-2285},
+  doi = {10.1007/s004680050220},
+  url = {https://doi.org/10.1007/s004680050220},
+  urldate = {2022-06-18},
+  abstract = {In situ gas-exchange data, for branchlets of white spruce [Picea glauca (Moench) Voss.] in a mature mixed-wood boreal forest in central Canada (53°44´N 105°14´W), were subjected to a multiple regression analysis. Vapor pressure deficit (VPD) and branchlet temperature (tleaf) were both significant predictors (P{$<$}0.0001) of stomatal conductance to water vapor (gsw) and net photosynthesis (An), together explaining 67 and 64\% of the variation in gsw and An, respectively. Since VPD and tleaf were autocorrelated in these field data, but also to further explore the nature of independent effects of temperature and humidity on water and CO2 exchange in white spruce, steady-state gas-exchange was performed on well-watered greenhouse-grown seedlings of white spruce. Results from laboratory experiments supported the following conclusions: (1) Transpiration (E) increases with VPD to an inflection point that increases linearly with tleaf. This tleaf effect on E could not be explained by trends in VPD, RH, An or PFD. Rather, our data support a model in which E and gsw are influenced by the balance between ’supply’ and ’loss’ of water to and from leaf tissue, respectively. The supply of water appears to be in accordance with Darcy’s law, where supply of water is proportional to the driving gradient in pressure/ tension, specific permeability (k), and inverse of water viscosity (n–1). Approximately half of the increase in E could be explained by the linear increase in n–1 with increasing tleaf. We propose that increases in k explain the remainder of the increase in E with tleaf. (2) VPD and tleaf appear to have independent effects on gsw. In contrast, RH effects on gsw or E were subtle and could be explained by a combination of effects of tleaf and VPD. (3) An was affected primarily by tleaf, being reduced at low (10°C) and high (40°C) temperatures, and only indirectly by humidity parameters via stomatal conductance, viz. intercellular CO2 concentrations. Our results have implications for the prediction of water fluxes from plants and canopies in areas where plant temperatures vary diurnally or seasonally.},
+  langid = {english},
+  keywords = {Key words Picea glauca,Photosynthesis,Stomatal conductance,Transpiration,Water viscosity},
+  file = {/Users/nidhivinod/Zotero/storage/HHB6NDBT/Fredeen and Sage - 1999 - Temperature and humidity effects on branchlet gas-.pdf}
+}
+
 @article{fribergExtremeDivergenceFloral2013,
   title = {Extreme Divergence in Floral Scent among Woodland Star Species ({{Lithophragma}} Spp.) Pollinated by Floral Parasites},
   author = {Friberg, Magne and Schwind, Christopher and Raguso, Robert A. and Thompson, John N.},
@@ -13756,6 +13775,25 @@
   langid = {english},
   keywords = {Abies,Acclimatization,Acer,Carbon Dioxide,Czech Republic,Ecosystem,Fagus,Kinetics,Light,Photosynthesis,Picea,Plant Leaves,Tilia,Time Factors,Trees},
   file = {/Users/nidhivinod/Zotero/storage/958IY3PA/Urban et al. - 2007 - Induction of photosynthesis and importance of limi.pdf}
+}
+
+@article{urbanStomatalConductanceIncreases2017a,
+  title = {Stomatal Conductance Increases with Rising Temperature},
+  author = {Urban, Josef and Ingwers, Miles and McGuire, Mary Anne and Teskey, Robert O.},
+  date = {2017-08-08},
+  journaltitle = {Plant Signal Behav},
+  volume = {12},
+  number = {8},
+  eprint = {28786730},
+  eprinttype = {pmid},
+  pages = {e1356534},
+  issn = {1559-2316},
+  doi = {10.1080/15592324.2017.1356534},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5616154/},
+  urldate = {2022-06-18},
+  abstract = {Stomatal conductance directly modifies plant water relations and photosynthesis. Many environmental factors affecting the stomatal conductance have been intensively studied but temperature has been largely neglected, even though it is one of the fastest changing environmental variables and it is rising due to climate change. In this study, we describe how stomata open when the temperature increases. Stomatal conductance increased by ca 40\% in a broadleaf and a coniferous species, poplar (Populus deltoides x nigra) and loblolly pine (Pinus taeda) when temperature was increased by 10 °C, from 30 °C to 40 °C at a constant vapor pressure deficit of 1~kPa. The mechanism of regulating stomatal conductance by temperature was, at least partly, independent of other known mechanisms linked to water status and carbon metabolism. Stomatal conductance increased with rising temperature despite the decrease in leaf water potential, increase in transpiration, increase in intercellular CO2 concentration and was decoupled from photosynthesis. Increase in xylem and mesophyll hydraulic conductance coming from lower water viscosity may to some degree explain temperature dependent opening of stomata. The direct stomatal response to temperature allows plants to benefit from increased evaporative cooling during the heat waves and from lower stomatal limitations to photosynthesis but they may be jeopardized by faster depletion of soil water.},
+  pmcid = {PMC5616154},
+  file = {/Users/nidhivinod/Zotero/storage/GJ5QPESQ/Urban et al. - 2017 - Stomatal conductance increases with rising tempera.pdf}
 }
 
 @incollection{ustinHowOpticalProperties2020,
