--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -420,7 +420,7 @@ However, water supply cannot meet the demands caused by the high radiation and *
 These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and $\delta^{13}C$ (section 3.3, Table `r table_leaf_traits`).
 Stomatal depression reduces transpirational cooling (Fig. `r fig_leaf_T`e), thus amplifying the warming of sun leaves by high radiation [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which *g~s~* is greatest, *T~opt~* of *g~s~*, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in *g~s~* in response to rising *T~air~* (driven by increased VPD) than lower-canopy shade leaves [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
-This, added to the tendency for sun leaves to have higher *T~leaf~*, implies that high *T~air~* should decrease *g~s~* of upper canopy leaves more than understory leaves, particularly when water availability is limited.
+Available data also suggest that high *T~air~* can directly drive stomatal opening, if vapor pressure is experimentally adjusted in tandem with *T~air~* to keep VPD constant [@fredeenTemperatureHumidityEffects1999a; @mottStomatalResponsesHumidity2010; @urbanStomatalConductanceIncreases2017a], though it appears that the negative effect of temperature on *g~s~*, mediated by VPD, generally overrides the positive effect of temperature per *se* in nature, causing *g~s~* to decline when the leaf warms.
 
 ### 4.2. Photosynthesis
 
