addressing comment about gs

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4773,6 +4773,41 @@
   file = {/Users/nidhivinod/Zotero/storage/VDJEQINM/Hagemeier and Leuschner - 2019 - Leaf and Crown Optical Properties of Five Early-, .pdf}
 }
 
+@article{hallRegulationWaterLoss1975,
+  title = {Regulation of {{Water Loss}} by {{Citrus Leaves}}},
+  author = {Hall, Anthony E. and Camacho-B, Saul E. and Kaufmann, Merrill R.},
+  date = {1975},
+  journaltitle = {Physiologia Plantarum},
+  volume = {33},
+  number = {1},
+  pages = {62--65},
+  issn = {1399-3054},
+  doi = {10.1111/j.1399-3054.1975.tb03766.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1399-3054.1975.tb03766.x},
+  urldate = {2022-06-18},
+  abstract = {The factors responsible for the low transpiration rates of citrus were investigated. Leaf resistance to water vapor exchange by orange seedlings (Citrus sinensis L. cv. Koethen) including a substantial boundary layer resistance, was as low as 1 s cm−1 in humid air. Leaf resistance of well watered plants increased to values as large as 5 s cm−1 when the difference in absolute humidity between leaf and air was increased. Leaf resistance was only slightly influenced by temperature between 20 and 30°C providing the humidity difference between leaf and air was kept constant. Leaf resistance increased when leaf temperature was increased between 20 and 30°C when the absolute humidity external to the leaf was kept constant. Increased humidity differences resulted in greater increases in leaf resistance during initial experiments than when the experiments were repeated with the same leaves indicating acclimation by the plant. It was concluded that the effects of humidity differences on leaf resistance are partially responsible for the low transpiration rates of citrus.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1399-3054.1975.tb03766.x},
+  file = {/Users/nidhivinod/Zotero/storage/EK2YE3YT/Hall et al. - 1975 - Regulation of Water Loss by Citrus Leaves.pdf}
+}
+
+@article{hallStomatalResponseEnvironment1975,
+  title = {Stomatal {{Response}} to {{Environment}} with {{Sesamum}} Indicum. {{L}}. 1},
+  author = {Hall, Anthony E. and Kaufmann, Merrill R.},
+  date = {1975-03},
+  journaltitle = {Plant Physiol},
+  volume = {55},
+  number = {3},
+  eprint = {16659101},
+  eprinttype = {pmid},
+  pages = {455--459},
+  issn = {0032-0889},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC541637/},
+  urldate = {2022-06-18},
+  abstract = {Leaf resistance of Sesamum indicum L. increased when the humidity gradient between leaf and air was increased, at moderate temperatures, even though calculated carbon dioxide concentrations within the leaf decreased slightly. Mesophyll resistance remained relatively constant when humidity gradients were changed, indicating that the increases in leaf resistance were mainly caused by reductions in stomatal aperture and that nonstomatal aspects of photosynthesis and respiration were not affected. Low carbon dioxide concentrations inside the leaf decreased but did not eliminate resistance response to the humidity gradient. Internal carbon dioxide concentrations had little effect on resistance in humid air but had moderate effects on resistance with large humidity gradients between leaf and air. Stomatal response to humidity was not present at high leaf temperatures. Effects of humidity gradients on photosynthetic and stomatal responses to temperature suggested that large humidity gradients may contribute to mid-day closure of stomata and depressions in photosynthesis.},
+  pmcid = {PMC541637}
+}
+
 @article{hamadaAssessingMonitoringSemiarid2013,
   title = {Assessing and Monitoring Semi-Arid Shrublands Using Object-Based Image Analysis and Multiple Endmember Spectral Mixture Analysis},
   author = {Hamada, Yuki and Stow, DouglasA. and Roberts, DarA. and Franklin, Janet and Kyriakidis, PhaedonC.},
@@ -11873,6 +11908,24 @@
   issn = {0028-646X},
   abstract = {Studies of heat and mass exchange between leaves and their local environment are central to our understanding of plant-atmosphere interactions. The transfer across aerodynamic leaf boundary layers is generally described by non-dimensional expressions which reflect largely empirical adaptations of engineering models derived for flat plates. This paper reviews studies on leaves, and leaf models with varying degrees of abstraction, in free and forced convection. It discusses implications of findings for leaf morphology as it affects - and is affected by - the local microclimate. Predictions of transfer from many leaves in plant communities are complicated by physical and physiological feedback mechanisms between leaves and their environment. Some common approaches, and the current challenge of integrating leaf-atmosphere interactions into models of global relevance, are also briefly addressed.},
   file = {/Users/nidhivinod/Zotero/storage/USQA6PMH/Schuepp - 1993 - Tansley Review No. 59. Leaf Boundary Layers.pdf}
+}
+
+@article{schulzeRoleAirHumidity1974,
+  title = {The Role of Air Humidity and Leaf Temperature in Controlling Stomatal Resistance of {{Prunus}} Armeniaca {{L}}. under Desert Conditions},
+  author = {Schulze, E. -D. and Lange, O. L. and Evenari, M. and Kappen, L. and Buschbom, U.},
+  date = {1974-06-01},
+  journaltitle = {Oecologia},
+  volume = {17},
+  number = {2},
+  pages = {159--170},
+  issn = {1432-1939},
+  doi = {10.1007/BF00346278},
+  url = {https://doi.org/10.1007/BF00346278},
+  urldate = {2022-06-18},
+  abstract = {Experiments with Prunus armeniaca were carried out under conditions of constant temperature but varying air humidity. Experiments were also contucted with a constant water vapor difference between the evaporating sites in a leaf and the air, but with varying leaf temperature. These served as a basis for predicting the daily course of total diffusion resistance under the natural climatic conditions of a desert. For the simulation, the rsults of the experiments at constant conditions with only one variable factor are fitted with empirical equations which serve as “calibration curves” to predict the change in diffusion resistance caused by a change in humidity and temperature calculated from the meteorological data of a desert day. The simulation shows that for P. armeniaca humidity and temperature are the dominating factors in controlling the daily course of diffusion resistance. For meteorologically very different days the simulation allows the increase in diffusion resistance in the morning to be predicted with an accuracy of 90\%–105\% as compared to directly observed measurements. In the afternoon, especially after extreme climatic conditions during the morning, the deviation between predicted and observed values of diffusion resistance may be greater, but not more than -20\% to -30\%. This possibly indicates the existence of an additional factor of significance which was not included in the simulation. The two peaked curves of net photosynthesis and transpiration characteristic of plants living under arid conditions can be explained in this species by the humidity-and temperature-controlled stomatal response. This stomatal regulation leads to a decreasing total daily transpirational water loss on a dry day as compared to a moist one. The significance of this controlling mechanism for the primary production and the water relations of P. armeniaca is discussed.},
+  langid = {english},
+  keywords = {Diffusion Resistance,Leaf Temperature,Stomatal Regulation,Stomatal Resistance,Stomatal Response},
+  file = {/Users/nidhivinod/Zotero/storage/T8TG7CEE/Schulze et al. - 1974 - The role of air humidity and leaf temperature in c.pdf}
 }
 
 @article{schymanskiStomatalControlLeaf2013,
