--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -154,6 +154,10 @@ l.313 'information from adjacent mature leaves or apical meristems, including a 
 
 l.579 'implies that high 𝑇𝑎𝑖𝑟 should decrease 𝑔𝑠 of upper canopy leaves more than understory leaves'. The authors here are ignoring what they’ve said previously, that high Tair is associated with high VPD (l. 199-200), and that VPD is conclusively a much stronger driver of gs than Tleaf (Leuning 1995, Grossiord). I think the sentence should be corrected and include VPD.  I'm not yet aware of a good study that has decoupled VPD and Tleaf to prove that Tleaf intrinsically causes reduction in gs. So the authors cannot conclude this.
 
+**We have removed the quoted sentence as it was redundant with that which had preceded it, but had confusingly couched the message of the preceding sentence as if it were a speculation rather than an empirical fact. The preceding sentence, which we have retained, read:**
+*“…sun leaves in the upper canopy show a stronger decrease in* *g~s~* *in response to rising* *T~air~* *(driven by increased VPD) than lower-canopy shade leaves (Hernández et al., 2020; Carter et al., 2021)”.*
+**That is an empirical result. The fact that the effect of *T~air~* on *g~s~* in that result is driven by VPD rather than somehow directly by *T~air~* itself is indicated by the fact that increasing temperature itself apparently *opens* stomata, rather than closing them. This is also germane to the reviewer’s final comment about decoupling VPD and *T~leaf~*. There are in fact six published studies that have decoupled VPD and *T~leaf~*, and they all suggest temperature per se causes an increase, not a reduction, in stomatal conductance. We have added the following sentence to the end of the paragraph to clarify this matter, citing three of the studies out of six due to word count limit: “Available data also suggest that high *T~air~* can directly drive stomatal opening, if vapor pressure is experimentally adjusted in tandem with *T~air~* to keep VPD constant [@schulzeRoleAirHumidity1974; @hallRegulationWaterLoss1975; @hallStomatalResponseEnvironment1975; @fredeenTemperatureHumidityEffects1999a; @mottStomatalResponsesHumidity2010; @urbanStomatalConductanceIncreases2017a], though it appears that the negative effect of temperature on *g~s~*, mediated by VPD, generally overrides the positive effect of temperature per se in nature, causing *g~s~* to decline when the leaf warms.**
+
 *response required*
 
 l.629 'we currently lack mechanistic understanding of how and why the temperature sensitivity of respiration varies across the forest vertical profile'. Other than that it varies according to the prevailing temperature difference? I think the temperature difference between upper and lower canopy positions, the theme of this review, should be mentioned in regard to this.
