--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -239,7 +239,7 @@ Elevation of *T~leaf~* above *T~air~* varies with micrometeorological conditions
 During drought (associated with conditions that are hot and dry, with higher-than-average solar radiation), when *g~s~* is limiting, *T~leaf~* - *T~air~* will tend to be higher in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have stronger *g~s~* limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and *g~b~* enable cooling in the upper canopy, whereas lower wind and *g~b~* in the understory limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017 <!-- @songTreeSurfaceTemperature2020-->]. 
-Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
+Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves, because wind speeds and hence *g~b~* are generally smaller in the lower canopy [@robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999]. 
 Limitations in heat dissipation in shade leaves, together with physiological propensities, may cause above-optimal *T~leaf~* under slight heat or drought stress or during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
 In addition to lower wind speeds, higher RH (lower VPD) in the understory and inner canopy also inhibits evaporative cooling, thus increasing *T~leaf~* - *T~air~* [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
@@ -446,7 +446,7 @@ In the meantime, it remains unresolved whether photosynthesis is more affected b
 Similar to photosynthesis, respiration tends to be higher in upper-canopy sun leaves, but its temperature sensitivity (*Q~10~* or *E~0~*) shows no definite trend along the vertical gradient.
 Specifically, the temperature sensitivity of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves<!--[<!--@carterExperimentalWarmingTropical2021-> @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007 <!--@zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006->]-->, greater in upper-canopy leaves<!--[@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]-->, or greater in the lower canopy <!--[@griffinCanopyPositionAffects2002]--> (Table `r table_leaf_metabolism`). 
 This variation may be attributable to forest type, leaf traits and age [e.g., greater *Q~10~* in younger leaves, @zhouLeafageEffectsTemperature2015], or acclimation to high temperature that decreases *Q~10~* [@slotGeneralPatternsAcclimation2015; @carterExperimentalWarmingTropical2021]. 
-Overall, although *Q~10~* is influenced by the temperature difference between upper and lower canopy positions, we currently lack mechanistic understanding of how and why *Q~10~* varies across the forest vertical profile. 
+Overall, although the temperature difference between upper and lower canopy positions is important driver of *Q~10~*, we currently lack mechanistic understanding of how and why *Q~10~* varies across the forest vertical profile. 
 
 
 
