--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -241,7 +241,7 @@ This is because sun leaves are exposed to higher irradiance and VPD, and therefo
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and *g~b~* enable cooling in the upper canopy, whereas lower wind and *g~b~* in the understory limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017 <!-- @songTreeSurfaceTemperature2020-->]. 
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves, because wind speeds and hence *g~b~* are generally smaller in the lower canopy [@robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999]. 
 Limitations in heat dissipation in shade leaves, together with physiological propensities, may cause above-optimal *T~leaf~* under slight heat or drought stress or during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
-In addition to lower wind speeds, higher RH (lower VPD) in the understory and inner canopy also inhibits evaporative cooling, thus increasing *T~leaf~* - *T~air~* [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
+In addition to lower wind speeds, higher RH (lower VPD) in the understory and inner canopy also reduces evaporative cooling (because evaporation rate generally increases with VPD), thus increasing *T~leaf~* - *T~air~* [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
 Vertical *T~leaf~* gradients also vary with canopy structure (Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`). 
 Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most incoming radiation and preventing vertical air mixing in the understory. 
