I have addressed all the comments now

--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -147,7 +147,7 @@ l.264-265 'their environment is less conducive to dissipating excess heat compar
 
 l.269 How does lower VPD in the understory inhibit evaporative cooling, if VPD is the major driver for evaporation? I think I understand how this can be counter-intuitive, but the reasoning isn't explained so it all becomes opaque to the reader. Please explain very briefly.
 
-**Lower VPD inhibits evaporative cooling precisely because VPD is the major driver for evaporation: Transpiration rate generally increases as VPD increases, and decreases as VPD decreases. Therefore lower VPD will mean less transpiration and hence less evaporative cooling. Perhaps the word *‘inhibits’* confused the issue; we have replaced *‘inhibits’* with *‘reduces’*. We have also modified the sentence to read, ‘In addition to lower wind speeds, higher RH (lower VPD) in the understory and inner canopy also reduces evaporative cooling (because evaporation rate generally increases with VPD), thus increasing Tleaf – Tair …’.” (phrase “because evaporation rate generally increases with VPD” added)**
+**Lower VPD inhibits evaporative cooling precisely because VPD is the major driver for evaporation: Transpiration rate generally increases as VPD increases, and decreases as VPD decreases. Therefore lower VPD will mean less transpiration and hence less evaporative cooling. Perhaps the word *‘inhibits’* confused the issue; we have replaced *‘inhibits’* with *‘reduces’*. We have also modified the sentence to read, ‘In addition to lower wind speeds, higher RH (lower VPD) in the understory and inner canopy also reduces evaporative cooling (because evaporation rate generally increases with VPD), thus increasing *T~leaf~* – *T~air~* …’.” (phrase “because evaporation rate generally increases with VPD” added)**
 
 l.313 'information from adjacent mature leaves or apical meristems, including a “memory” of previous conditions in that location, ...'.  This was not in the previous version that I can see, and I don't see the basis for inclusion of this statement. As well, use of the term 'memory' seems awkward if not entirely wrong (even reading between quotes). Please revise.
 
