--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -10866,6 +10866,23 @@
   file = {/Users/nidhivinod/Zotero/storage/DVI3HWHK/Rambo and North - 2009 - Canopy microclimate response to pattern and densit.pdf}
 }
 
+@article{raupachApplyingLagrangianFluid1989,
+  title = {Applying {{Lagrangian}} Fluid Mechanics to Infer Scalar Source Distributions from Concentration Profiles in Plant Canopies},
+  author = {Raupach, M. R.},
+  date = {1989-09-01},
+  journaltitle = {Agricultural and Forest Meteorology},
+  series = {Biometeorology},
+  volume = {47},
+  number = {2},
+  pages = {85--108},
+  issn = {0168-1923},
+  doi = {10.1016/0168-1923(89)90089-0},
+  url = {https://www.sciencedirect.com/science/article/pii/0168192389900890},
+  urldate = {2022-06-27},
+  abstract = {It is well known that gradient-diffusion theory does not describe the transfer of scalar entities (such as heat, water vapour, CO2 and pollutant gases) through the air in and just above plant canopies. An effective replacement is offered by an analytic Lagrangian method for calculating the concentration field of a scalar emanating from a steady spatially extensive source in an inhomogeneous flow. The method can be labelled “localized near-field” or LNF theory. This paper first summarizes the assumptions and results of the LNF theory, leading to a simple solution for the “forward problem” of predicting the mean scalar concentration profile C(z) maintained by a given source density profile S(z). It is then shown how the theory can be applied to solve the “inverse problem” of inferring S(z) from measurements of C(z).},
+  langid = {english}
+}
+
 @article{raupachAveragingProceduresFlow1982,
   title = {Averaging Procedures for Flow within Vegetation Canopies},
   author = {Raupach, M. R. and Shaw, R. H.},
