--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -194,7 +194,7 @@ This light gradient drives variation in leaf temperature (section 2), traits (se
 Vertical transport in forest canopies is dominated by turbulent transport, making vertical profiles of wind speed, water vapor, CO~2~, and temperature more difficult to predict and to generalize on the basis of theoretical first principles than radiation profiles. 
 Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients [eddy diffusivities, @penmanWeatherWheatEssay1960]-- such that wind speed declines logarithmically with proximity to the canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. 
 Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [@raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
-Within canopies, however, transport often fails to mimic diffusion – e.g., transport of momentum [@shawSecondaryWindSpeed1977] or heat [@raupachLagrangianAnalysisScalar1987] may occur in the direction opposite to that predicted by gradients of wind speed or temperature, respectively – making vertical wind profiles difficult to generalize from first principles [@denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
+Within canopies, however, transport often fails to mimic diffusion – e.g., transport of momentum [@shawSecondaryWindSpeed1977] or heat [@raupachLagrangianAnalysisScalar1987] may occur in the direction opposite to that predicted by gradients of wind speed or temperature, respectively – making vertical wind profiles difficult to generalize from first principles [@denmeadScalarTransportPlant1987; @raupachApplyingLagrangianFluid1989; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
 Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. 
 These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
 
